Refactor code and enhance UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=meme-overflow-service
+
+# DeepAI Configuration
+meme-overflow.deep-ai.api-key=b6f33ba6-37f9-48b4-90f0-e75448586042
+meme-overflow.deep-ai.base-url=https://api.deepai.org
+meme-overflow.deep-ai.text-to-image-endpoint=/api/text2img
+meme-overflow.deep-ai.timeout-seconds=60
+
+# Logging Configuration
+logging.level.org.example.memeoverflow=DEBUG
+logging.level.org.springframework.web=INFO
+
+# Server Configuration
+server.port=8080
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+
+# SSL Configuration (for development only)
+server.ssl.enabled=false
